# django-form-creator

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  requirements.in  requirements.txt  runtests.py  setup.cfg  update_readme_cov.sh
.github/workflows/: ci.yml
example/: manage.py
example/example/: .env.sample  middleware.py  settings.py  urls.py
form_creator/: admin.py  apps.py  checks.py  decorators.py  exporters.py  form_fields.py  forms.py  managers.py  models.py  question_form_fields.py  signals.py  urls.py  utils.py  views.py
form_creator/api/: routers.py  serializers.py  views.py
form_creator/migrations/: 0001_initial.py  0002_alter_form_status_alter_formquestion_seq_no_and_more.py  0003_backfill_seq_no.py  0004_alter_formquestion_options_and_more.py  0005_alter_form_description_alter_formelementorder_form_and_more.py
form_creator/src/form_setup/: .env.example  README.md  package-lock.json  package.json
form_creator/templates/: base.html
form_creator/templates/form_creator/: _form_questions_table.html  form_create.html  form_delete.html  form_detail.html  form_edit.html  form_list.html  form_questions_edit.html  form_response.html  (+1 more)
form_creator/templatetags/: form_creator_tags.py
form_creator/tests/: baker_recipes.py  selenium_browser.py  test_admin.py  test_checks.py  test_decorators.py  test_exporters.py  test_form_fields.py  test_forms.py  test_manager.py  test_models.py  test_question_form_fields.py  test_signals.py  test_templatetags_form_creator_tags.py  test_utils.py  test_views.py  test_views_forms.py
(+37 files in other folders)
