[metadata]
name = django-form-creator
version = 0.0.5
description = A Django application that lets users dynamically create forms.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Salaah Amin
url = https://github.com/Salaah01/django-form-creator
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

install_requires =
    django >= 3.2


[options.packages.find]
exclude =
    example
    tests
    tests.*

[coverage:run]
omit =
    *tests*
    *migrations*